# End-to-End-ML-Regression-project

./: .gitignore  app.py  housing-api-task-def.json  main.py  pyproject.toml  streamlit-task-def.json
mlruns/596586059537662401/: meta.yaml
mlruns/596586059537662401/1b9fd2c7607e43cb828f04996d271a71/: meta.yaml
mlruns/596586059537662401/2565aa6af1cf47fe809461794e7507c2/: meta.yaml
mlruns/596586059537662401/342f00205e0045479e6095006d7e3cdd/: meta.yaml
mlruns/596586059537662401/3e3d8f0af3764ddfa958e560cd5f6eaf/: meta.yaml
mlruns/596586059537662401/46f992ff1e254c3faa52abbf81b15932/: meta.yaml
mlruns/596586059537662401/4af026689e234a13b2b2a835ef27bc30/: meta.yaml
mlruns/596586059537662401/77f61feb234849e4aaf0b56f802187e2/: meta.yaml
mlruns/596586059537662401/811b5adca54c47a0b234853b73c2942c/: meta.yaml
mlruns/596586059537662401/93f14f289ccc4625a9dc9aff5fa05462/: meta.yaml
mlruns/596586059537662401/a0998ec3ffb44d03bc44e478e026bd1a/: meta.yaml
mlruns/596586059537662401/a14c01248eb44b4aa372a6bd9b11bd26/: meta.yaml
mlruns/596586059537662401/cebf7542fb8f40fabaa94075dceeab0d/: meta.yaml
models/: xgb_best_model.pkl  xgb_model.pkl
notebooks/: 02_EDA_cleaning.ipynb  03_feature_eng_encoding.ipynb  04_baseline.ipynb  05_linear_regression_regularization.ipynb  06_XGBoost.ipynb  07_hyperparameter_tuning_MFLow.ipynb  EDA_cleaning.ipynb  cleaning.ipynb  data_split.ipynb  new.ipynb
src/api/: main.py
src/feature_pipeline/: feature_engineering.py  load.py
src/training_pipeline/: tune.py
tests/: smoke_test_.ipynb
(+176 files in other folders)
